Refine test case (OpenRewrite...)